@@ -92,7 +92,7 @@ extern "C" {
 //////////////////////////////////////////////////////////////////////////
 // Matt.Dobbs@Cern.CH, April 24, 2000, refer to:
 // M. Dobbs and J.B. Hansen, "The HepMC C++ Monte Carlo Event Record for
-// High Energy Physics", Computer Physics Communications (to be published).
+// High Energy Physics",  Comput.Phys.Commun. 134 (2001) 41-46.
 //
 // Generic Wrapper for the fortran HEPEVT common block
 // This class is intended for static use only - it makes no sense to
